<resources>
    <string name="app_name">YarGUide</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Главная страница</string>
    <string name="nav_about">О программе</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_bus_schedule">Расписание автобусов</string>
    <string name="nav_settings">Настройки</string>
    <string-array name="nav_item_activity_titles">
        <item>Главная страница</item>
        <item>FAQ</item>
        <item>Настройки</item>
        <item>Расписание автобусов</item>
        <item>О программе</item>
    </string-array>
    <string name="activity_title_about">О программе</string>
    <string name="action_map">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Дополнительно</string>
    <string name="activity_name">Магазины</string>
    <string name="shop_centers">Торговые центры</string>
    <string name="night_life">Ночная жизнь</string>
    <string name="image_of_shop">image of yaroslavlObject</string>
    <string name="backdrop_title_shops">Магазины</string>
    <string name="title_activity_map">Map</string>
    <string name="bas_schedule">Расписание\n автобусов</string>
    <string name="object_info_description">Тут будет информация об объекте</string>
    <string name="object_address">Адрес объекта</string>
    <string name="object_email">Эл.почта объекта</string>
    <string name="object_phone_number">Номер телефона объекта</string>
    <string name="object_open_to">Время работы объекта</string>
    <string name="lenta_name">Лента</string>
    <string name="lenta_description">Лента - хороший магазин для покупок на неделю.
        Можно оформить карту \"Лента\": каждая покупка будет дешевле.\nАссортимент
        богатый: от продуктов до бытовых товаров.
        \n\n<b>Совет:</b> лучше сразу оформить карту \"Лента\", которая стоит
        пару сотен рублей, и можно довольно выгодно закупиться продуктами.\nУчитывая то, что магазин
        расположен недалеко от общежития, советую каждому хотя бы раз туда съездить.</string>
    <string name="lenta_address">пр.Авиаторов, 149</string>
    <string name="lenta_email">lenta.com</string>
    <string name="lenta_phone_number">8(485)277–38–71</string>
    <string name="lenta_open_to">10:00–19:00</string>
    <string name="lenta_location_text">Добраться до \"Ленты\" очень просто:\n\n<li>Автобус
        №35 от остановки \"Университетский городок\" и до остановки \"Проспект Машиностроителей\".
    </li>\n\n<li>Маршрутка №35 по той же схеме.</li>
    </string>
    <string name="lenta_location_advice"><b>Заметка:</b> маршрутки и автобусы ходят не очень долго
        (примерно до 20:00), поэтому поздно вечером в \"Ленту\" лучше не ездить.</string>
    <string name="vliga_title">Высшая Лига</string>
    <string name="vliga_description">Этот магазин, расположенный на Октябрьской площади, представляет
        собой супермаркет, в котором Вы можете купить как продукты, так и бытовые товары.\n\n<b>Особенности:</b>
         невысокие цены. Некоторые продукты стоят в 2 раза дешевле, чем в других продуктовых магазинах.
        \n<b>Совет:</b> если хотите закупиться на небольшую сумму, советую посетить Высшую Лигу.</string>
    <string name="vliga_address">ул.Победы, 6</string>
    <string name="vliga_email">vliga.com</string>
    <string name="vliga_phone_number">8(800)450–10–01</string>
    <string name="vliga_open_to">8:00–22:00</string>
    <string name="vliga_location_text">Высшая Лига расположена в Доме Моды, который находится на Октябрьской
        площади. Значит, нужно лишь добраться до неё и пройти несколько сотен метров до Дома Моды.
        \n\n<li>Автобус 22с от остановки \"Студенческий городок\" и до остановки \"Октябрьская площадь\".</li>
        \n\n<li>Автобусы 12, 22 от остановки \"Университетский городок\" и до Октябрьской площади.</li>
        \n\n<li>Маршрутка 38 также от \"Университетского\" до Октябрьской.</li></string>
    <string name="globus_description">Гипермаркет Глобус расположен в Заволжском районе. Пожалуй, это
            самый крупный гипермаркет Ярославля. В нём есть всё: продукты, бытовые товары, канцелярия.
        \nТакже Глобус торгует товарами собственного производства.
        \nИз продуктов там можно найти всё, что угодно. Правда, цены выше, чем в некоторых других магазинах.
        \nТакже в Глобусе есть ресторан, а на самом деле столовая, в которой можно вкусно поесть
        за приемлемую цену (там очень большие порции).</string>
    <string name="globus_advice"><b>Совет:</b> хотите всё в одном месте? Посетите Глобус.</string>
    <string name="globus_address">пос.Красный бор, стр.1</string>
    <string name="globus_email">globus.ru</string>
    <string name="globus_phone_number">8(485)258–54–65</string>
    <string name="globus_open_to">Круглосуточно\nРесторан: 8:00–22:00</string>
    <string name="globus_location_text">Доехать до Глобуса можно без пересадок:
        \n\n<li>Автобус №35 от Университетского городка до конечной остановки.</li>
        \n\n<li>Маршрутка №35 по той же схеме.</li></string>
    <string name="globus_location_advice"><b>Заметка:</b> маршрутки и автобусы ходят не очень долго
        (примерно до 20:00), поэтому поздно вечером в Глобус лучше не ездить.</string>
    <string name="pyaterochka_description">Пятерочка - супермаркет, расположенный в ТРЦ \"Флагман\".
        Здесь Вы можете купить продукты по хорошим ценам. К тому же, в Пятерочке периодически бывают
        акции на определенные продукты (например, чипсы, кока-кола).
        \n<b>Совет:</b> по скидкам продукты стоят довольно дешево. Грех не купить.
        \nК тому же, Пятерочка находится как раз рядом с остановкой на Октябрьской площади,
        откуда много студентов уезжают в общагу. Поэтому зайти в нее всегда удобно и по пути.</string>
    <string name="pyaterochka_address">ул. Республиканская, 7</string>
    <string name="pyaterochka_email">pyaterochka.ru</string>
    <string name="pyaterochka_phone_number">8(485)258–59–29</string>
    <string name="pyaterochka_open_to">8:00–22:00</string>
    <string name="pyaterochka_location_text">Чтобы добраться до Пятерочки, нужно доехать до
        Октябрьской площади. А затем зайти во \"Флагман\". Вот собственно и все.
        \n\n<li>Автобус №22 от Студенческого городка и до Октябрьской площади.</li>
        \n\n<li>Автобусы 12, 22 от Университетского городка и до Октбярьской площади.</li>
        \n\n<li>Маршрутка 38 также от Университетского.</li></string>
    <string name="dixy_name">Дикси</string>
    <string name="dixy_description">Дикси - один из самых ближайших к общаге магазинов.
        Если Вам нужно купить что-то по мелочи (хлеб, например), Вы можете съездить в Дикси.
        \nНельзя сказать, что магазин располагает богатым ассортиментом (не советую закупаться на
        несколько дней), но для небольших покупок он вполне подходит.</string>
    <string name="dixy_address">ул. Клубная, 3</string>
    <string name="dixy_email">dixy.ru</string>
    <string name="dixy_phone_number">8(800)333–02–01</string>
    <string name="dixy_open_to">9:00–22:00</string>
    <string name="dixy_advice"><b>Совет:</b> Уже 9 часов вечера, а у Вас нет хлеба или пиваса?
        Тогда Вам в Дикси!</string>
    <string name="dixy_location_text">Вам нужно ехать в сторону Нижнего поселка (в обратную сторону, короче).
        \n\n<li>Автобусы 12, 22, 35 от Университетского городка и до остановки \"Средний поселок\"</li>
        \n\n<li>Маршрутки 35, 38 по той же схеме.</li></string>
    <string name="aura_also">В Ауре находятся:</string>
    <string name="aura_description">Аура - самый любимый всеми торговый центр в Ярославле!
        \nХотите одеться? \"ТВОЕ\", \"Gloria Jeans\", \"Kari\", \"Спортмастер\".
        \nХотите купить продуктов? Зайдите в \"Перекресток\".
        \nХотите покушать? \"KFC\", \"БургерКинг\", \"МакДональдс\".
        \nКороче, Вы поняли - просто посетите Ауру.</string>
    <string name="aura_address">ул.Победы, 41</string>
    <string name="aura_email">auramall.ru</string>
    <string name="faq_title">Часто задаваемые вопросы:</string>
    <string name="question_one">1. Правда ли, что ни до одного магазина не дойти пешком?</string>
    <string name="answer_one">Нет, в шаговой доступности есть магазин на улице Союзная. Магазин
        небольшой, но вполне себе годный для покупки продуктов.</string>
    <string name="question_two">2. Где я могу подключить интернет?</string>
    <string name="answer_two">Пожалуй, единственный адекватный провайдер - Нетис. Вам нужно съездить
        на Красную площадь в здание, расположенное рядом с главным корпусом, а затем спуститься в подвал
        и там уже попросить подключить интернет. Через несколько дней к Вам приедут и подключат.</string>
    <string name="question_three">3. Где можно оформить проездной?</string>
    <string name="answer_three">Проездной можно оформить по адресу: ул. Советская, 64 (это рядом с
        Домом Моды на Октябрьской площади). Касса там работает с 8:00 до 15:00. Чтобы оформить проездной,
        Вам понадобится паспорт, студак, справка о том, что Вы - студент Демида (зайдите в деканат, закажите)
        и деньги на оплату проездного. Ценник: автобус - 400 рублей, автобус+троллейбус - 500 рублей.</string>
    <string name="question_four">4. Я попал на неотремонтированный этаж. Что делать?</string>
    <string name="answer_four">Ничего. Жить и радоваться. Вообще, на верхних этажах условия тоже вполне
        себе приличные. Однако, в будущем семестре, Вы можете переселиться на отремонтированный этаж, нужно
        лишь прийти к Неле и попросить об этом.</string>
    <string name="question_five">5. Расскажи про систему оплаты за общагу.</string>
    <string name="answer_five">Оплата производится ежемесячно в кассе главного корпуса (Красная площадь)
        или через мобильные приложения (Сбербанк Онлайн, Альфа Банк). Летом платим примерно 300 рублей,
        зимой - 500-550.\nЧтобы узнать, сколько Вам платить, Вы оставляете адрес
        своей электронной почты Нелли, и ежемесячно примерно 5 числа Вам будет приходить уведомление
        с квитанцией об оплате на почту.</string>
    <string name="question_six">6. Правда ли, что в общаге грязно?</string>
    <string name="answer_six">Нет, наша общага - одна из самых лучших в Ярославле, а может, и самая
        лучшая по части чистоты. У нас аккуратные чистые коридоры, комнаты с косметическим ремонтом
        почти на всех этажах (до 7 этажа).</string>
    <string name="question_seven">7. У меня сломался ноутбук/телефон. Где я могу починить?</string>
    <string name="answer_seven">Один из вариантов - компьютерный салон Комдив, расположенный на
        улице Фурманова. Хороший салон, где Вам окажут все необходимые услуги. За подробной
        информацией Вы можете обратиться по телефону 427-888 или зайти на сайт comdiv.ru</string>
    <string name="question_eight">8. Мне нужна информация об общаге: почтовый индекс, адрес,
        контактная информация.</string>
    <string name="answer_eight">Адрес: ул. Союзная, 141\nПочтовый индекс: 150008.\nТелефон помощника
        проректора Нелли Новомировны - 24-40-08.</string>
    <string name="question_nine">9. Где я могу найти ближайший банкомат Сбербанка/Альфа-Банка?</string>
    <string name="answer_nine">Самый близкий банкомат Альфа-Банка расположен в 7 корпусе в 300 метрах от
        общаги. А еще один банкомат расположен в главном корпусе.\nЧто касается банкоматов Сбербанка,
        то их много, но самые удобные варианты - во Флагмане на Октябрьской площади и в самом банке
        совсем недалеко от Октябрьской площади (на пересечении улиц Республиканская и Советская).</string>
</resources>