<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/nav_faq" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_bus_schedule"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/nav_bus_schedule" />


    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about"
                android:icon="@drawable/ic_info_black_24dp"/>
        </menu>
    </item>

</menu>