<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_information"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/object_info_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:text="@string/object_info_description" />

                <View
                    android:id="@+id/separate_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:clickable="false"
                    android:id="@+id/location"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_room_black_24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/location_icon"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/location_icon">

                        <TextView
                            android:id="@+id/object_info_address"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:layout_width="wrap_content"
                            android:textSize="15dp"
                            android:layout_height="wrap_content"
                            android:text="@string/object_address"
                            android:clickable="false"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/email"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_public_black_24dp"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/email_icon"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/object_info_email"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:layout_width="wrap_content"
                            android:textSize="15dp"
                            android:layout_height="wrap_content"
                            android:text="@string/object_email"
                            android:clickable="false" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/phone_number"
                    android:layout_height="50dp"
                    android:clickable="false" >

                    <ImageView
                        android:id="@+id/phone_number_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_call_black_24dp"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/repeat_ll"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/phone_number_icon"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/object_info_phone"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:layout_width="wrap_content"
                            android:textSize="15dp"
                            android:layout_height="wrap_content"
                            android:text="@string/object_phone_number"
                            android:clickable="false" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/open_to"
                    android:clickable="false"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/open_to_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_query_builder_black_24dp"
                        android:layout_centerVertical="true"
                        android:clickable="false" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/open_to_icon"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/object_info_open_to"
                            android:textColor="@color/abc_primary_text_material_light"
                            android:layout_width="wrap_content"
                            android:textSize="15dp"
                            android:layout_height="wrap_content"
                            android:text="@string/object_open_to"
                            android:clickable="false" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:id="@+id/separate_line_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        fab:menu_labels_style="@style/MenuLabelsStyle"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_shadowColor="#444"
        fab:menu_colorNormal="@color/aura_tabs"
        fab:menu_colorPressed="#F2AB00"
        fab:menu_colorRipple="#D99200"
        fab:layout_anchor="@id/ll_information"
        fab:layout_anchorGravity="bottom|right|end" >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_4_small"
            fab:fab_label="Расположение"
            fab:fab_colorNormal="@color/aura_tabs" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_5_small"
            fab:fab_label="Ассортимент"
            fab:fab_colorNormal="@color/aura_tabs" />

        <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_5_small"
        fab:fab_label="Цены"
        fab:fab_colorNormal="@color/aura_tabs" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_5_small"
            fab:fab_label="Цены"
            fab:fab_colorNormal="@color/aura_tabs"
            android:visibility="gone"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
